--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bundler": "metro"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
@@ -26,6 +27,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.1",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1"
   },
